# sonolus.py

./: .gitattributes  .gitignore  .python-version  404.html  CNAME  MANIFEST.in  OPTIMIZATION_SURVEY.md  OPTIMIZER_REWRITE.md  README.md  REVIEWER_INFO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.claude/: settings.json
.claude/commands/: port.md
.github/workflows/: publish.yaml  rust.yml
.run/: Python tests in tests.run.xml
changelog/: index.html
concepts/: index.html
concepts/builtins/: index.html
concepts/cli/: index.html
concepts/constructs/: index.html
concepts/overview/: index.html
concepts/project/: index.html
concepts/resources/: index.html
concepts/types/: index.html
doc_stubs/: builtins.pyi  math.pyi  num.pyi  random.pyi  typing.pyi
docs/: index.md  overview.md
docs/changelog/: index.md
docs/concepts/: builtins.md  cli.md  constructs.md  index.md  overview.md  project.md  resources.md  types.md
docs/guides/: bucket.md  coming-soon.md  effect.md  index.md  particle.md  play.md  project-structure.md  screen.md  setup.md  skin.md  ui.md  usage.md
docs/reference/: builtins.md  constructs.md  index.md  iterables.md  math.md  random.md  sonolus.script.archetype.md  sonolus.script.array.md  sonolus.script.array_like.md  sonolus.script.bucket.md  sonolus.script.containers.md  sonolus.script.debug.md  sonolus.script.easing.md  sonolus.script.effect.md  sonolus.script.engine.md  sonolus.script.globals.md  sonolus.script.instruction.md  sonolus.script.interval.md  sonolus.script.iterator.md  sonolus.script.level.md  sonolus.script.maybe.md  sonolus.script.metadata.md  sonolus.script.num.md  sonolus.script.numtools.md  sonolus.script.options.md  sonolus.script.particle.md  sonolus.script.print.md  sonolus.script.printing.md  sonolus.script.project.md  sonolus.script.quad.md  sonolus.script.record.md  sonolus.script.runtime.md  sonolus.script.sprite.md  sonolus.script.stream.md  sonolus.script.text.md  sonolus.script.timing.md  sonolus.script.transform.md  sonolus.script.ui.md  sonolus.script.values.md  sonolus.script.vec.md  (+2 more)
guides/: index.html
guides/bucket/: index.html
guides/coming-soon/: index.html
guides/effect/: index.html
guides/options/: index.html
guides/particle/: index.html
guides/play/: index.html
guides/project-structure/: index.html
guides/screen/: index.html
guides/setup/: index.html
guides/skin/: index.html
guides/ui/: index.html
guides/usage/: index.html
overview/: index.html
reference/: index.html
reference/builtins/: index.html
reference/constructs/: index.html
reference/iterables/: index.html
reference/math/: index.html
reference/random/: index.html
reference/sonolus.script.archetype/: index.html
reference/sonolus.script.array/: index.html
reference/sonolus.script.array_like/: index.html
reference/sonolus.script.bucket/: index.html
reference/sonolus.script.containers/: index.html
reference/sonolus.script.debug/: index.html
reference/sonolus.script.easing/: index.html
reference/sonolus.script.effect/: index.html
reference/sonolus.script.engine/: index.html
reference/sonolus.script.globals/: index.html
reference/sonolus.script.instruction/: index.html
reference/sonolus.script.interval/: index.html
reference/sonolus.script.iterator/: index.html
reference/sonolus.script.level/: index.html
reference/sonolus.script.maybe/: index.html
reference/sonolus.script.metadata/: index.html
reference/sonolus.script.num/: index.html
reference/sonolus.script.numtools/: index.html
reference/sonolus.script.options/: index.html
reference/sonolus.script.particle/: index.html
reference/sonolus.script.print/: index.html
reference/sonolus.script.printing/: index.html
reference/sonolus.script.project/: index.html
reference/sonolus.script.quad/: index.html
reference/sonolus.script.record/: index.html
reference/sonolus.script.runtime/: index.html
reference/sonolus.script.sprite/: index.html
reference/sonolus.script.stream/: index.html
reference/sonolus.script.text/: index.html
reference/sonolus.script.timing/: index.html
reference/types/: index.html
rust/: ARCHITECTURE.md  Cargo.toml  ENCODING.md  EXECUTION.md  PAYLOAD.md  PORT.md
rust/baselines/: python-fast.json  python-standard.json  rust-corpus.json
rust/sonolus-backend-core/: Cargo.toml
rust/sonolus-backend-core/src/: alloc.rs  build.rs  cfg.rs  coalesce.rs  decode.rs  diff.rs  effects.rs  emit.rs  flatten.rs  interpret.rs  lib.rs  lower.rs  mir.rs  nodes.rs  ops.rs  output.rs  pipeline.rs  rewrite.rs  ssa.rs  tile.rs
rust/sonolus-backend-core/src/analysis/: bitset.rs  dom.rs  liveness.rs  loops.rs  mod.rs
rust/sonolus-backend-core/src/collection/: mod.rs  pyjson.rs
rust/sonolus-backend-core/src/passes/: dce.rs  gvn.rs  if_convert.rs  licm.rs  mem2reg.rs  mod.rs  normalize_switch.rs  rules.rs  sccp.rs  shape.rs  switch_form.rs
rust/sonolus-backend-core/tests/: analysis.rs  collection.rs  corpus.rs  differential.rs  differential_dce.rs  differential_flatten.rs  differential_gvn.rs  differential_if_convert.rs  differential_licm.rs  differential_mem2reg.rs  differential_normalize_switch.rs  differential_shape.rs  differential_switch_form.rs  differential_tile.rs  fuzz.rs  fuzz_dce.rs  fuzz_flatten.rs  fuzz_gvn.rs  fuzz_if_convert.rs  fuzz_licm.rs  fuzz_mem2reg.rs  fuzz_normalize_switch.rs  fuzz_shape.rs  fuzz_switch_form.rs  fuzz_tile.rs  identity_levels.rs  interpret.rs  ops.rs  pipeline_replay.rs  replay.rs  sccp.rs
rust/sonolus-backend-core/tests/common/: canary.rs  fuzzgen.rs  mod.rs
rust/sonolus-backend-core/tests/proptest-regressions/: fuzz.txt  fuzz_gvn.txt  fuzz_if_convert.txt  fuzz_shape.txt  sccp.txt
rust/sonolus-backend-py/: Cargo.toml  pyproject.toml
rust/sonolus-backend-py/src/: collection.rs  lib.rs
rust/testdata/: README.md  manifest.json
scripts/: generate.py
search/: search_index.json
tests/: conftest.py  corpus_capture.py
tools/: ab_collection.py  bench_compile.py  diag_g33.py  gen_corpus.py  gen_ops.py  metrics.py
(+1362 files in other folders)
