[project]
name = "sonolus.py"
version = "0.4.2"
description = "Sonolus engine development in Python"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
sonolus-py = "sonolus.build.cli:main"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "I", "N", "D", "UP", "YTT", "B", "A", "COM", "C4", "DTZ", "PIE", "PT", "Q", "SLOT", "SIM", "PTH", "PL", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E402", "D1", "COM812", "PLW2901", "PLW3201", "PLR6301", "PLC0415", "PLR2004", "PLR09", "SIM108", "FURB113", "A005", "B903", "FURB118", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uv>=0.8.3",
    "hypothesis>=6.115.3",
    "pre-commit>=4.0.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "pytest-cov>=6.0.0",
    "tox>=4.23.2",
    "tox-uv>=1.16.0",
    "ty"
]
docs = [
    "mkdocs-material>=9.5.45",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sonolus"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["py312", "py313", "py314"]

[tool.tox.env_run_base]
description = "Run tests"
passenv = ["CI"]
deps = [
    "hypothesis>=6.115.3",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
]
uv_python_preference = "managed"
commands = [["pytest", "tests", "-n", "auto"]]

[tool.ty.environment]
root = ["./sonolus"]

[tool.ty.src]
include = ["sonolus/script"]
