[project]
name = "sonolus.py"
version = "0.10.1"
description = "Sonolus engine development in Python"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
sonolus-py = "sonolus.build.cli:main"

[project.urls]
Documentation = "https://sonolus.py.qwewqa.xyz/"
Repository = "https://github.com/qwewqa/sonolus.py"
Issues = "https://github.com/qwewqa/sonolus.py/issues"
Changelog = "https://sonolus.py.qwewqa.xyz/changelog/"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "I", "N", "D", "UP", "YTT", "B", "A", "COM", "C4", "DTZ", "PIE", "PT", "Q", "SLOT", "SIM", "PTH", "PL", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E402", "D1", "COM812", "PLW2901", "PLW3201", "PLR6301", "PLC0415", "PLR2004", "PLR09", "SIM108", "FURB113", "A005", "B903", "FURB118", "E501", "E741"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uv>=0.9.2",
    "hypothesis>=6.140.3",
    "pre-commit>=4.3.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "pytest-cov>=7.0.0",
    "tox>=4.31.0",
    "tox-uv>=1.29.0",
    "ty"
]
docs = [
    "mkdocs-material>=9.6.21",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.1",
]

[tool.hatch.build.targets.wheel]
packages = ["sonolus"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["py312", "py313", "py314"]

[tool.tox.env_run_base]
description = "Run tests"
passenv = ["CI"]
deps = [
    "hypothesis>=6.137.1",
    "pytest-xdist>=3.8.0",
    "pytest>=8.3.3",
]
uv_python_preference = "managed"
commands = [["pytest", "tests", "-n", "auto"]]

[tool.ty.environment]
root = ["./sonolus"]

[tool.ty.src]
include = ["sonolus/script"]
