[workspace]
resolver = "3"
members = ["sonolus-backend-core", "sonolus-backend-py"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
publish = false

[workspace.dependencies]
sonolus-backend-core = { path = "sonolus-backend-core" }
pyo3 = { version = "0.28.3", features = ["abi3-py312"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight readability more than they help.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
