[workspace]
resolver = "3"
members = ["sonolus-backend-core", "sonolus-backend-py"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
publish = false

[workspace.dependencies]
sonolus-backend-core = { path = "sonolus-backend-core" }
pyo3 = { version = "0.28.3", features = ["abi3-py312"] }
# Collection packaging (PORT.md task T5.1):
# - flate2: resource/mode-data gzip (mtime=0 reproducible output)
# - indexmap: insertion-order maps anywhere ordering can reach output (invariant 5)
# - serde_json + preserve_order: item JSON kept opaque-but-parseable with key order intact
# - sha1: content-addressed repository names (sha1 hex, per the frozen collection.py)
# - zip: .scp archive reading (and fixture writing in tests); deflate via the shared
#   flate2/zlib-rs backend only — the default `deflate` meta-feature would pull in zopfli
flate2 = "1.1.9"
indexmap = "2.14.0"
# rayon: per-unit parallel compilation inside the single `build_engine` call
# (PORT.md task T4.2; deterministic assembly — results land in unit-indexed slots)
rayon = "1.11"
serde_json = { version = "1", features = ["preserve_order"] }
sha1 = "0.11.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight readability more than they help.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
