[package]
name = "sonolus-backend-core"
description = "Pure-Rust compiler backend for sonolus.py (no Python bindings)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
