[package]
name = "sonolus-backend-core"
description = "Pure-Rust compiler backend for sonolus.py (no Python bindings)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
flate2 = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
proptest = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[lints]
workspace = true
